--- a/user_access/templates/home_page.html
+++ b/user_access/templates/home_page.html
@@ -4,15 +4,14 @@
 <div class="collapse navbar-collapse" id="navbarNav">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">User Profile</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Progess</a>
+      <a class="nav-link" href="/accounts/profile/progress/create">Add Progress</a>
     </li>
   </ul>
 </div>
 {% endblock %}
 
 {% block main %}
-
+<div class="alert alert-secondary" role="alert">
+  No previous data found! Pleas create a <a href="/accounts/profile/create">user profile</a>.
+</div>
 {% endblock %}
