--- a/user_profile/static/profile_detail.css
+++ b/user_profile/static/profile_detail.css
@@ -15,3 +15,16 @@
 .carousel-inner .carousel-item-start {
   transform: translateX(0);
 }
+
+.images-div .card {
+    font-size: 12px;
+    margin: 0 5px;
+}
+.images-div .card p {
+    margin-bottom: 1px;
+}
+
+.slick-prev:before,
+.slick-next:before {
+    color: red;
+}
