--- a/user_profile/templates/userprofile_detail.html
+++ b/user_profile/templates/userprofile_detail.html
@@ -1,9 +1,12 @@
 {% extends "home_page.html" %}
 {% load widget_tweaks %}
 {% load static %}
+{% load custom_filters %}
 
 {% block header_content %}
-    <link rel='stylesheet' href="{% static 'profile_detail.css' %}">
+<link rel='stylesheet' href="{% static 'profile_detail.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'slick/slick.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'slick/slick-theme.css' %}"/>
 {% endblock %}
 
 {% block main %}
@@ -33,28 +36,38 @@
     </ul>
     <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-        <div class="d-flex justify-content-evenly">
+        <div class="images-div">
         {% for data in progress_data %}
-            <div class="card mt-3" style="width: 20rem; border: none;">
-                  <img src="{{ data.front_photo.url }}" class="card-img-top" alt="...">
+            <div class="card mt-3" style="border: none;">
+                  <img src="data:image;base64,{{ data.front_photo|bin_2_img }}" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">{{ data.created_at }}</h5>
+                    <p class="card-title">{{ data.created_at }}</p>
                     <p class="card-text"><b>Weight (kg):</b> {{ data.weight }}</p>
                     <p class="card-text"><b>Body Fat (%):</b> {{ data.body_fat_percentage }}</p>
                     <p class="card-text"><b>FFMI:</b> {{ data.ffmi|floatformat }}</p>
                   </div>
-
-                  <img src="{{ data.back_photo.url }}" class="card-img-top" alt="...">
+            </div>
+        {% endfor %}
+        </div>
+        <div class="images-div">
+        {% for data in progress_data %}
+            <div class="card mt-3" style="border: none;">
+                  <img src="data:image;base64,{{ data.back_photo|bin_2_img }}" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">{{ data.created_at }}</h5>
+                    <p class="card-title">{{ data.created_at }}</p>
                     <p class="card-text"><b>Weight (kg):</b> {{ data.weight }}</p>
                     <p class="card-text"><b>Body Fat (%):</b> {{ data.body_fat_percentage }}</p>
                     <p class="card-text"><b>FFMI:</b> {{ data.ffmi|floatformat }}</p>
                   </div>
-
-                  <img src="{{ data.side_photo.url }}" class="card-img-top" alt="...">
+            </div>
+        {% endfor %}
+        </div>
+        <div class="images-div">
+        {% for data in progress_data %}
+            <div class="card mt-3" style="border: none;">
+                  <img src="data:image;base64,{{ data.side_photo|bin_2_img }}" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">{{ data.created_at }}</h5>
+                    <p class="card-title">{{ data.created_at }}</p>
                     <p class="card-text"><b>Weight (kg):</b> {{ data.weight }}</p>
                     <p class="card-text"><b>Body Fat (%):</b> {{ data.body_fat_percentage }}</p>
                     <p class="card-text"><b>FFMI:</b> {{ data.ffmi|floatformat }}</p>
@@ -69,9 +82,28 @@
         </div>
       </div>
     </div>
+{% endblock %}
+
+{% block body_end %}
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="{% static 'slick/slick.min.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <script>
+$(document).ready(function() {
+  $('.images-div').slick({
+    centerMode: true,
+    centerPadding: '60px',
+    dots: true,
+    infinite: true,
+    speed: 300,
+    slidesToShow: 2,
+    slidesToScroll: 2,
+    arrows: true
+  });
+});
+
 const labels = {{ labels|safe }};
 const data = {
   labels: labels,
