--- a/user_profile/templates/userprofile_detail.html
+++ b/user_profile/templates/userprofile_detail.html
@@ -36,45 +36,47 @@
     </ul>
     <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-        <div class="images-div">
-        {% for data in progress_data %}
-            <div class="card mt-3" style="border: none;">
-                  <img src="data:image;base64,{{ data.front_photo|bin_2_img }}" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <p class="card-title">{{ data.created_at }}</p>
-                    <p class="card-text"><b>Weight (kg):</b> {{ data.weight }}</p>
-                    <p class="card-text"><b>Body Fat (%):</b> {{ data.body_fat_percentage }}</p>
-                    <p class="card-text"><b>FFMI:</b> {{ data.ffmi|floatformat }}</p>
-                  </div>
+          {% if progress_data %}
+            <div class="images-div">
+            {% for data in progress_data %}
+                <div class="card mt-3" style="border: none;">
+                      <img src="data:image;base64,{{ data.front_photo|bin_2_img }}" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-title">{{ data.created_at }}</p>
+                        <p class="card-text"><b>Weight (kg):</b> {{ data.weight }}</p>
+                        <p class="card-text"><b>Body Fat (%):</b> {{ data.body_fat_percentage }}</p>
+                        <p class="card-text"><b>FFMI:</b> {{ data.ffmi|floatformat }}</p>
+                      </div>
+                </div>
+            {% endfor %}
             </div>
-        {% endfor %}
-        </div>
-        <div class="images-div">
-        {% for data in progress_data %}
-            <div class="card mt-3" style="border: none;">
-                  <img src="data:image;base64,{{ data.back_photo|bin_2_img }}" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <p class="card-title">{{ data.created_at }}</p>
-                    <p class="card-text"><b>Weight (kg):</b> {{ data.weight }}</p>
-                    <p class="card-text"><b>Body Fat (%):</b> {{ data.body_fat_percentage }}</p>
-                    <p class="card-text"><b>FFMI:</b> {{ data.ffmi|floatformat }}</p>
-                  </div>
+            <div class="images-div">
+            {% for data in progress_data %}
+                <div class="card mt-3" style="border: none;">
+                      <img src="data:image;base64,{{ data.back_photo|bin_2_img }}" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-title">{{ data.created_at }}</p>
+                        <p class="card-text"><b>Weight (kg):</b> {{ data.weight }}</p>
+                        <p class="card-text"><b>Body Fat (%):</b> {{ data.body_fat_percentage }}</p>
+                        <p class="card-text"><b>FFMI:</b> {{ data.ffmi|floatformat }}</p>
+                      </div>
+                </div>
+            {% endfor %}
             </div>
-        {% endfor %}
-        </div>
-        <div class="images-div">
-        {% for data in progress_data %}
-            <div class="card mt-3" style="border: none;">
-                  <img src="data:image;base64,{{ data.side_photo|bin_2_img }}" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <p class="card-title">{{ data.created_at }}</p>
-                    <p class="card-text"><b>Weight (kg):</b> {{ data.weight }}</p>
-                    <p class="card-text"><b>Body Fat (%):</b> {{ data.body_fat_percentage }}</p>
-                    <p class="card-text"><b>FFMI:</b> {{ data.ffmi|floatformat }}</p>
-                  </div>
+            <div class="images-div">
+            {% for data in progress_data %}
+                <div class="card mt-3" style="border: none;">
+                      <img src="data:image;base64,{{ data.side_photo|bin_2_img }}" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-title">{{ data.created_at }}</p>
+                        <p class="card-text"><b>Weight (kg):</b> {{ data.weight }}</p>
+                        <p class="card-text"><b>Body Fat (%):</b> {{ data.body_fat_percentage }}</p>
+                        <p class="card-text"><b>FFMI:</b> {{ data.ffmi|floatformat }}</p>
+                      </div>
+                </div>
+            {% endfor %}
             </div>
-        {% endfor %}
-        </div>
+          {% endif %}
       </div>
       <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
         <div>
