muscle mass insertion

--- a/user_profile/templates/userprofile_detail.html
+++ b/user_profile/templates/userprofile_detail.html
@@ -127,6 +127,12 @@ const data = {
     backgroundColor: 'rgb(99, 99, 132)',
     borderColor: 'rgb(99, 99, 132)',
     data: {{ weight|safe }},
+  },
+  {
+    label: 'Muscle Mass (kg)',
+    backgroundColor: 'rgb(33, 99, 132)',
+    borderColor: 'rgb(33, 99, 132)',
+    data: {{ muscle_mass|safe }},
   },]
 };
 const config = {
